<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/consonant_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_p"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_ph"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_ph1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_ph2"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_b"
            android:textAllCaps="false"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_m"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consonant_w"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_1"
            android:text="@string/consonant_f"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_1"
            android:text="@string/consonant_f1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_t"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_th1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_th2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th2"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_th3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th3"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_th4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th4"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_th5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_th5"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_d"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_d1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_d1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_r"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_l"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_l1"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_s"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_s1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_s2"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_s3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_s3"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_n"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_2"
            android:text="@string/consonant_n1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_c"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_ch"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_ch1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_ch2"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_j"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_j1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_3"
            android:text="@string/consonant_j1"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_k"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_kh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_kh"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_kh1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_kh1"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/consonant_kh2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_kh2"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_kh3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_kh3"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_ng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_4"
            android:text="@string/consonant_ng"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_5"
            android:text="@string/consonant_q"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_5"
            android:text="@string/consonant_h"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/consonant_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_button_group_5"
            android:text="@string/consonant_h1"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>